--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,25 @@
 {% extends "base.html" %}
+{% load static %}
 
 
 {% block content %}
-<h1 class="text-danger">Test Bootstrap</h1>
-<h1 class="text-orange">Test Custom CSS</h1>
+
+    <main class="container-main">
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="hero-image">
+                        <!-- background image is replaced with img on smaller screens -->
+                        <img src="{% static 'images/hero.png' %}" class="img-fluid d-sm-none" alt="Woman with blonde curly hairstyle">
+                        <div class="jumbotron d-flex flex-column align-items-center">
+                            <p class="lead d-sm-none">Welcome to <span class="rotate">Eleganza</span>!</p>
+                            <h1 class="rotate d-none d-sm-block">Eleganza</h1>
+                            <p class="lead text-uppercase">luxurious award winning hair salon</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 {% endblock %}
