style: add padding to ensure that fixed navbar does not cover content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,11 @@ body {
     font-size: 100%;
 }
 
+/* to ensure that fixed navbar does not cover content */
+body { 
+    padding-top: 56px; 
+}
+
 
 /* ---------------------------------- Main */
 
