style: apply custom styling to bootstrap navbar component

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,17 @@ body {
 }
 
 
+/* -------------------------------- Navbar */
+
+.bg-black {
+    background-color: black;
+}
+
+.navbar-nav {
+    text-transform: uppercase;
+}
+
+
 /* ---------------------------------- Main */
 
 .container-main {
