--- a/templates/base.html
+++ b/templates/base.html
@@ -14,9 +14,9 @@
 <body>
     <header>
         <!-- bootstrap navbar -->
-        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
-            <a class="navbar-brand" href="#">Eleganza</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+        <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-black">
+            <a class="navbar-brand text-white" href="#">Eleganza</a>
+            <button class="navbar-toggler bg-light" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
                 aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -24,13 +24,13 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mt-2 mt-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-white" href="#">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Appointments</a>
+                        <a class="nav-link text-white" href="#">Appointments</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login/Sign Up</a>
+                        <a class="nav-link text-white" href="#">Login/Sign Up</a>
                     </li>
                 </ul>
             </div>
