--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!--Font Awesome-->
+    <script src="https://kit.fontawesome.com/7e3e16c427.js" crossorigin="anonymous"></script>
     <title>Eleganza Hair Salon </title>
 </head>
 <body>
@@ -77,15 +79,15 @@
                     <h5 class="text-uppercase mb-4 pb-1">Salon contact</h5>
                     <ul class="fa-ul" style="margin-left: 1.65em;">
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-home"></i></span><span class="ms-2">1 Beauty Street, Dublin
+                            <span class="fa-li"><i class="fa-solid fa-house"></i></span><span class="ms-2">1 Beauty Street, Dublin
                             </span>
                         </li>
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-envelope"></i></span><span
+                            <span class="fa-li"><i class="fa-solid fa-envelope"></i></span><span
                                 class="ms-2">info@eleganzahairsalon.ie</span>
                         </li>
                         <li class="mb-3">
-                            <span class="fa-li"><i class="fas fa-phone"></i></span><span class="ms-2">(01) 234 5678
+                            <span class="fa-li"><i class="fa-solid fa-phone"></i></span><span class="ms-2">(01) 234 5678
                             </span>
                         </li>
                     </ul>
