--- a/templates/base.html
+++ b/templates/base.html
@@ -54,7 +54,7 @@
             <div class="row mt-4">
                 <!--Grid column-->
                 <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
-                    <h5 class="text-uppercase logo rotate mb-4">Eleganza</h5>
+                    <h5 class="logo rotate mb-4">Eleganza</h5>
                     <p class="text-uppercase">
                         luxurious award winning hair salon
                     </p>
