--- a/templates/base.html
+++ b/templates/base.html
@@ -60,16 +60,13 @@
                     </p>
                     <div class="mt-4">
                         <!-- Facebook -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i
-                                class="fab fa-facebook-f"></i></a>
-                        <!-- Dribbble -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-dribbble"></i></a>
-                        <!-- Twitter -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i class="fab fa-twitter"></i></a>
-                        <!-- Google + -->
-                        <a type="button" class="btn btn-floating btn-warning btn-lg"><i
-                                class="fab fa-google-plus-g"></i></a>
-                        <!-- Linkedin -->
+                        <a type="button" class="btn btn-warning btn-lg" href="https://www.facebook.com/" aria-label="Go to our twitter page (opens in new tab)" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                        <!-- Instagram -->
+                        <a type="button" class="btn btn-warning btn-lg" href="https://www.instagram.com/" aria-label="Go to our instagram page (opens in new tab)" target="_blank">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
                     </div>
                 </div>
                 <!--Grid column-->
