--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -7,9 +7,9 @@
 
 {% block content %}
 
-<div class="container container-account">
-    <div class="row">
-        <div class="col-xs-12 col-12 col-md-8 mx-auto">
+<div class="container container-account h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-xs-12 col-12 col-md-6 mx-auto">
             <div class="card">
                 <div class="card-body px-4">
                     <h2 class="card-title text-center display-4">{% trans "Sign In" %}</h2>
