--- a/templates/base.html
+++ b/templates/base.html
@@ -28,18 +28,21 @@
                     <li class="nav-item active">
                         <a class="nav-link text-white" href="{% url 'home' %}">Home<span class="sr-only">(current)</span></a>
                     </li>
+                    {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link text-white" href="#">Appointments</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'account_logout' %}">Logout</a>
                     </li>
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'account_signup' %}">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'account_login' %}">Login</a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
