style: add custom css styles to buttons on user profile page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,11 @@ body {
     color: #f2ece8;
 }
 
+.btn-custom {
+    background-color: #523D19;
+    color: #f2ece8;
+}
+
 
 
 /* --------------------------Media Queries */
