style: change the style of a button on hover on user profile page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,6 +92,11 @@ body {
     color: #f2ece8;
 }
 
+.card a:hover {
+    background-color: #f2ece8;
+    border: 2px solid #523D19;
+  }
+
 
 
 /* --------------------------Media Queries */
