fix background image

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         <section class="container-fluid">
             <div class="row">
                 <div class="col-12">
-                    <div class="hero-image" style="background-image: url('{% static 'images/hero.png' %}');">
+                    <div class="hero-image">
                         <!-- background image is replaced with img on smaller screens -->
                         <img src="{% static 'images/hero.png' %}" class="img-fluid d-sm-none" alt="Woman with blonde curly hairstyle">
                         <div class="jumbotron d-flex flex-column align-items-center">
