--- a/static/css/style.css
+++ b/static/css/style.css
@@ -105,6 +105,7 @@ body {
 @media screen and (min-width: 576px) {
     .hero-image {
         background: url('https://res.cloudinary.com/dzvdrexc8/image/upload/v1682719717/static/images/hero.9477b1c646ac.png') no-repeat center center;
+        /* background: url('/static/images/hero.png') no-repeat center center;-->*/
         background-size: cover;
         height: 100vh;
         display: flex;
