--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,21 @@
 
 {% block content %}
 
-    <main class="container-main">
-        <section class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="hero-image">
-                        <!-- background image is replaced with img on smaller screens -->
-                        <img src="{% static 'images/hero.png' %}" class="img-fluid d-sm-none" alt="Woman with blonde curly hairstyle">
-                        <div class="jumbotron d-flex flex-column align-items-center">
-                            <p class="lead d-sm-none">Welcome to <span class="rotate">Eleganza</span>!</p>
-                            <h1 class="rotate d-none d-sm-block">Eleganza</h1>
-                            <p class="lead text-uppercase">luxurious award winning hair salon</p>
-                        </div>
-                    </div>
+    <main class="bg-cream">
+    <!-- Hero section container-home -->
+        <section class="container container-home">
+            <div class="hero-content bg-black">
+                <!-- Hero image -->
+                <div>
+                    <img src="{% static 'images/hero.png' %}" class="img-fluid" alt="Woman with blonde curly hairstyle">
+                </div>
+                <!-- Hero text -->
+                <div class="jumbotron hero-text d-none d-md-block">
+                    <h1 class="rotate">Eleganza</h1>
+                    <p class="lead text-uppercase">award winning hair salon</p>
+                    <a class="btn btn-primary btn-lg" href="#" role="button">Book Now</a>
                 </div>
             </div>
         </section>
-    </main>
-
+    </div>
 {% endblock %}
