--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,26 @@
                     <a class="btn btn-primary btn-lg" href="#" role="button">Book Now</a>
                 </div>
             </div>
+            <!-- welcome card -->
+            <div class="container d-flex pl-0 pr-0 bg-cream">
+                <div class="row">
+                    <div class="col-12 col-lg-6 order-lg-2 align-self-center">
+                        <div class="card">
+                            <div class="card-body d-flex flex-column">
+                                <h2 class="card-title text-center">Welcome to Eleganza!</h2>
+                                <p class="card-text">Our award winning hair salon offers a luxury experience.</p>
+                                <p class="card-text">Book your appointment today.</p>
+                                <a href="#" class="btn btn-primary align-self-end">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-lg-6 order-lg-1 align-self-center">
+                        <div>
+                            <img src="{% static 'images/salon.png' %}" class="img-fluid" alt="hairdressing salon with modern interior design">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 {% endblock %}
