bug: correct a typo in welcome section of the home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
                         <div class="card">
                             <div class="card-body d-flex flex-column">
                                 <h2 class="card-title text-center">Welcome to Eleganza!</h2>
-                                <p class="card-text">Our award winning hair salon offers a luxury experience.</p>
+                                <p class="card-text">Our award winning hair salon offers you a luxury experience.</p>
                                 <p class="card-text">Book your appointment today.</p>
                                 <a href="#" class="btn btn-primary align-self-end">Book Now</a>
                             </div>
