style: change colour of the social icons in page footer

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,15 +65,15 @@
                 <div class="col-lg-4 col-md-12 mb-4 mb-md-0">
                     <h5 class="logo rotate mb-4">Eleganza</h5>
                     <p class="text-uppercase">
-                        luxurious award winning hair salon
+                        hair salon
                     </p>
                     <div class="mt-4">
                         <!-- Facebook -->
-                        <a type="button" class="btn btn-warning btn-lg" href="https://www.facebook.com/" aria-label="Go to our twitter page (opens in new tab)" target="_blank">
+                        <a type="button" class="btn btn-primary btn-lg" href="https://www.facebook.com/" aria-label="Go to our twitter page (opens in new tab)" target="_blank">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
                         <!-- Instagram -->
-                        <a type="button" class="btn btn-warning btn-lg" href="https://www.instagram.com/" aria-label="Go to our instagram page (opens in new tab)" target="_blank">
+                        <a type="button" class="btn btn-primary btn-lg" href="https://www.instagram.com/" aria-label="Go to our instagram page (opens in new tab)" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
                     </div>
