feat: add url link to book now button

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 <div class="jumbotron hero-text d-none d-md-block">
                     <h1 class="rotate">Eleganza</h1>
                     <p class="lead text-uppercase">award winning hair salon</p>
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Book Now</a>
+                    <a class="btn btn-primary btn-lg" href="{% url 'book' %}" role="button">Book Now</a>
                 </div>
             </div>
             <!-- welcome card -->
@@ -28,7 +28,7 @@
                                 <h2 class="card-title text-center">Welcome to Eleganza!</h2>
                                 <p class="card-text">Our award winning hair salon offers you a luxury experience.</p>
                                 <p class="card-text">Book your appointment today.</p>
-                                <a href="#" class="btn btn-primary align-self-end">Book Now</a>
+                                <a href="{% url 'book' %}" class="btn btn-primary align-self-end">Book Now</a>
                             </div>
                         </div>
                     </div>
