--- a/templates/book.html
+++ b/templates/book.html
@@ -4,21 +4,26 @@
 
 {% block content %}
 
-<div class="card">
-    <div class="card-body">
-        {% if user.is_authenticated %}
-            <form method="POST" action="book">
-                {{ form | crispy }}
-                {% csrf_token %}
-                <div>
-                    <p>
-                        <button type="Submit">Add Item</button>
-                    </p>
+<div class="container container-account h-100">
+    <div class="row align-items-center h-100">
+        <div class="col-xs-12 col-12 col-md-6 mx-auto">
+            <div class="card">
+                <div class="card-body">
+                    {% if user.is_authenticated %}
+                        <form method="POST" action="book">
+                            {{ form | crispy }}
+                            {% csrf_token %}
+                            <div>
+                                <p>
+                                    <button type="Submit">Add Item</button>
+                                </p>
+                            </div>
+                        </form>
+                    {% endif %}
                 </div>
-            </form>
-        {% endif %}
+            </div>
+        </div>
     </div>
 </div>
-
 
 {% endblock %}
