--- a/templates/book.html
+++ b/templates/book.html
@@ -19,6 +19,8 @@
                                 </p>
                             </div>
                         </form>
+                    {% else %}
+                    <p class="text-center">Please Login or Sign Up to book an appointment with us</p>
                     {% endif %}
                 </div>
             </div>
