feat: add else statement in book.html to display a message if user is not logged in

--- a/templates/book.html
+++ b/templates/book.html
@@ -20,7 +20,7 @@
                             </div>
                         </form>
                     {% else %}
-                    <p class="text-center">Please Login or Sign Up to book an appointment with us</p>
+                    <p class="text-center">Please Login or Sign Up to book an appointment with us.</p>
                     {% endif %}
                 </div>
             </div>
