--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <main class="bg-cream">
-    <!-- Hero section container-home -->
+        <!-- Hero section container-home -->
         <section class="container container-home">
             <div class="hero-content bg-black">
                 <!-- Hero image -->
@@ -34,11 +34,12 @@
                     </div>
                     <div class="col-12 col-lg-6 order-lg-1 align-self-center">
                         <div>
-                            <img src="{% static 'images/salon.png' %}" class="img-fluid" alt="hairdressing salon with modern interior design">
+                            <img src="{% static 'images/salon.png' %}" class="img-fluid"
+                                alt="hairdressing salon with modern interior design">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-    </div>
+    </main>
 {% endblock %}
