: correct syntax errors in base.html file

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,12 +74,12 @@
                     </p>
                     <div class="mt-4">
                         <!-- Facebook -->
-                        <a type="button" class="btn btn-primary btn-lg" href="https://www.facebook.com/"
+                        <a class="btn btn-primary btn-lg" href="https://www.facebook.com/"
                             aria-label="Go to our twitter page (opens in new tab)" target="_blank">
                             <i class="fa-brands fa-facebook"></i>
                         </a>
                         <!-- Instagram -->
-                        <a type="button" class="btn btn-primary btn-lg" href="https://www.instagram.com/"
+                        <a class="btn btn-primary btn-lg" href="https://www.instagram.com/"
                             aria-label="Go to our instagram page (opens in new tab)" target="_blank">
                             <i class="fa-brands fa-instagram"></i>
                         </a>
