feat: add nav link for editing booking item on user profile page

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -11,7 +11,7 @@
                     <h3 class="card-title">Colour</h3>
                     <p>Date: {{ appointment.date}}</p>
                     <p>Time: {{ appointment.time}}</p>
-                    <a href="#" class="btn btn-custom">Edit</a>
+                    <a href="/edit/{{ appointment.id }}" class="btn btn-custom">Edit</a>
                     <a href="#" class="btn btn-custom">Cancel</a>
                 </div>
             </div>
