--- a/static/css/style.css
+++ b/static/css/style.css
@@ -93,6 +93,11 @@ body {
     color: #f2ece8;
 }
 
+.btn-custom {
+    background-color: #523D19;
+    color: #f2ece8;
+}
+
 .card a:hover {
     background-color: #f2ece8;
     border: 2px solid #523D19;
