feat: add nav link for cancelling booking item on user profile page

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -12,7 +12,7 @@
                     <p>Date: {{ appointment.date}}</p>
                     <p>Time: {{ appointment.time}}</p>
                     <a href="/edit/{{ appointment.id }}" class="btn btn-custom">Edit</a>
-                    <a href="#" class="btn btn-custom">Cancel</a>
+                    <a href="/cancel/{{ appointment.id }}" class="btn btn-custom">Cancel</a>
                 </div>
             </div>
         </div>
