--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'account_logout' %}">Logout</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="{% url 'book' %}" class="btn btn-primary align-self-end">Book Now</a>
+                    </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link text-white" href="{% url 'account_signup' %}">Sign Up</a>
