--- a/templates/base.html
+++ b/templates/base.html
@@ -54,9 +54,26 @@
                 </ul>
             </div>
         </nav>
-
     </header>
 
+    <!--
+        Messages
+        the code was adopted from CI I Think Therefore I Blog Project tutorial
+    -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                {% for message in messages %}
+                    <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
+                        <strong>{{ message }}</strong>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Main Content -->
     {% block content %}
     {% endblock %}
 
