--- a/templates/book.html
+++ b/templates/book.html
@@ -20,7 +20,9 @@
                             </div>
                         </form>
                     {% else %}
-                    <p class="text-center">Please Login or Sign Up to book an appointment with us.</p>
+                    <p class="text-center">
+                        Please Login or Sign Up to book an appointment with us or to manage your existing appointments.
+                    </p>
                     {% endif %}
                 </div>
             </div>
