--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -17,7 +17,9 @@
             </div>
         </div>
         {% empty %}
-        <p>You have not booked any appointments yet</p>
+        <div class="col-12 my-3 mx-auto">
+            <p class="text-center">You have not booked any appointments yet</p>
+        </div>
         {% endfor%}
     </div>
 </div>
