--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -8,7 +8,7 @@
         <div class="col-sm-6 col-md-4 my-3 mx-auto">
             <div class="card">
                 <div class="card-body text-center">
-                    <h3 class="card-title">Colour</h3>
+                    <h3 class="card-title">Cut, Colour and Blow-Dry</h3>
                     <p>Date: {{ appointment.date}}</p>
                     <p>Time: {{ appointment.time}}</p>
                     <a href="/edit/{{ appointment.id }}" class="btn btn-custom">Edit</a>
