STYLE: change bootstrap class on profile page so that two columns are shown on larger screens only

--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -5,7 +5,7 @@
     <h2 class="text-center pt-4">My Booking History</h2>
     <div class="row align-items-center h-100">
         {% for appointment in appointments %}
-        <div class="col-sm-6 col-md-4 my-3 mx-auto">
+        <div class="col-md-6 my-3 mx-auto">
             <div class="card">
                 <div class="card-body text-center">
                     <h3 class="card-title">Cut, Colour and Blow-Dry</h3>
